=====================================================================
	Change Log
	phpGedView

	This and other information can be found online at
	http://www.phpgedview.net

	# $Id$
=====================================================================


Version 4.2.1
 - Fixed: [ 2555579 ] Interactive Tree box disappears when clicked (wooc)
 - Fixed: [ 2329962 ] autocomplete css (wooc)
 - Fixed: [ 2555011 ] Quick Update fails with suffix on name (wooc)
 - Fixed: [ 2554221 ] 4.2 Interactive tree shown for user and not the individual (canajun2eh)
 - Fixed: [ 1969541 ] 4.1.5 Quick Update:  Address gets concatenated (wooc)
 - Fixed: [ 1803282 ] [4.1.2] Adding OCCU in Quick Update wont work (wooc)

Version 4.2.0 2009-01-31
 - Added: GEDCOM config option to control Index or Portal page showing after Login (canajun2eh)
 - Fixed: [ 2544257 ] [4942] Show stat's charts ERROR 8's (wooc)
 - Changed: Reduced size of (Fxx) text in Navigator (windmillway)
 - Fixed: [ 2543891 ] Need to refresh to see approved changes (wooc)
 - Fixed: [ 2542150 ] [4927] Cannot add date to MARR when SOUR is present (wooc)
 - Fixed: [ 2536206 ] [4.1.6] Double Date Field on Census Re-edit (wooc)
 - Added: Quick Parents/Step/Immediate Family Page Link on Indi Page Family Navigator (windmillway)
 - Fixed: [ 2524544 ] AddFavourites() not working (canajun2eh)
 - Fixed: [ 2391927 ] Ahnentafel report crashes (ljm)
 - Changed: [ 2534555 ] Modify 'Prefer fact sources' option (canajun2eh)
 - Changed: [ 2481763 ] Change options that control the use of Quick Update (canajun2eh)
 - Changed: [ 2481776 ] Change order of Edit menu entries on Indi and Family pages (canajun2eh)
 - Fixed: [ 2256627 ] Ahnentafel report crashes (ljm)
 - Fixed: [ 2193477 ] [4146] Printer Friendly View Problems (wooc)
 - Fixed: [ 2530481 ] Autocomplete error adding new place (wooc)
 - Fixed: [ 2430622 ] [4548] Places Error Possibly Caused by Autocomplete (wooc)
 - Added: Support for Indonesian (canajun2eh)