@@ -10,6 +10,7 @@
 
 
 Version 4.2.1
+ - Added: Preparatory work to enable config option to turn on/off each Tab Navigator on Indi page (windmillway)
  - Fixed: [ 2555579 ] Interactive Tree box disappears when clicked (wooc)
  - Fixed: [ 2329962 ] autocomplete css (wooc)
  - Fixed: [ 2555011 ] Quick Update fails with suffix on name (wooc)
